# swagger.json
@@ -4,6 +4,11 @@
     "title": "Student survey system API",
     "version": "v1"
   },
+  "servers": [
+    {
+      "url": "https://localhost:5001/api"
+    }
+  ],
   "paths": {
     "/api/SurveyResponses": {
       "get": {
@@ -16,7 +21,8 @@
             "in": "query",
             "schema": {
               "type": "string",
-              "default": ""
+              "default": "",
+              "nullable": true
             }
           },
           {
@@ -168,7 +174,8 @@
             "in": "query",
             "schema": {
               "type": "string",
-              "default": ""
+              "default": "",
+              "nullable": true
             }
           },
           {
@@ -234,7 +241,8 @@
             "in": "query",
             "schema": {
               "type": "string",
-              "default": ""
+              "default": "",
+              "nullable": true
             }
           },
           {
@@ -300,7 +308,8 @@
             "in": "query",
             "schema": {
               "type": "string",
-              "default": ""
+              "default": "",
+              "nullable": true
             }
           },
           {
@@ -458,7 +467,8 @@
             "in": "query",
             "schema": {
               "type": "string",
-              "default": ""
+              "default": "",
+              "nullable": true
             }
           },
           {
@@ -686,7 +696,24 @@
         },
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserDto"
+                }
+              }
+            }
           }
         }
       }
@@ -746,7 +773,24 @@
         },
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CurrentUserDto"
+                }
+              }
+            }
           }
         }
       }
@@ -796,15 +840,14 @@
     "schemas": {
       "QuestionType": {
         "enum": [
-          0,
-          1,
-          2,
-          3,
-          4,
-          5
+          "Text",
+          "SingleSelect",
+          "MultipleSelect",
+          "Numeric",
+          "Date",
+          "Boolean"
         ],
-        "type": "integer",
-        "format": "int32"
+        "type": "string"
       },
       "AnswerDto": {
         "type": "object",
@@ -823,11 +866,7 @@
             "nullable": true
           },
           "questionType": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/QuestionType"
-              }
-            ]
+            "$ref": "#/components/schemas/QuestionType"
           },
           "questionId": {
             "type": "integer",
@@ -921,11 +960,7 @@
             "nullable": true
           },
           "questionType": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/QuestionType"
-              }
-            ]
+            "$ref": "#/components/schemas/QuestionType"
           },
           "values": {
             "type": "array",
@@ -994,6 +1029,49 @@
         },
         "additionalProperties": false
       },
+      "UserRole": {
+        "enum": [
+          "Student",
+          "Lecturer",
+          "Admin"
+        ],
+        "type": "string"
+      },
+      "CurrentUserDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "usosId": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "firstName": {
+            "type": "string",
+            "nullable": true
+          },
+          "lastName": {
+            "type": "string",
+            "nullable": true
+          },
+          "username": {
+            "type": "string",
+            "nullable": true
+          },
+          "userRole": {
+            "$ref": "#/components/schemas/UserRole"
+          },
+          "token": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "UsosAuthDto": {
         "type": "object",
         "properties": {
@@ -1015,15 +1093,6 @@
           }
         },
         "additionalProperties": false
-      },
-      "UserRole": {
-        "enum": [
-          0,
-          1,
-          2
-        ],
-        "type": "integer",
-        "format": "int32"
       },
       "User": {
         "type": "object",
@@ -1061,11 +1130,7 @@
             "nullable": true
           },
           "userRole": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserRole"
-              }
-            ]
+            "$ref": "#/components/schemas/UserRole"
           }
         },
         "additionalProperties": false
